<resources>
    <string name="app_name">炽旗</string>
    <string name="abnormal_exit_message">程序上次运行时出现致命异常，错误详情请参照日志</string>

    <string name="confirm">确定</string>
    <string name="default_user">默认用户</string>
    <string name="auto">AUTO</string>
    <string name="user_tip">视频和轴是UP主心血的结晶，抄完作业记得至少给点个赞哦👍</string>

    <string name="app_update_check_noneed">应用为最新版本，无需更新</string>
    <string name="app_update_check_fail">应用检查更新失败</string>
    <string name="app_update_dialog_confirm">更新</string>
    <string name="app_update_dialog_cancel">稍后</string>
    <string name="app_update_progress_title">安装包下载</string>
    <string name="app_update_progress_text_prepare">准备中</string>
    <string name="app_update_progress_text">%1$d / %2$d KB</string>
    <string name="app_update_progress_finished">安装中。。。</string>
    <string name="app_update_progress_error">安装包下载失败</string>

    <string name="db_update_check_noneed">数据库无需更新</string>
    <string name="db_update_dialog_title">数据库更新</string>
    <string name="db_update_dialog_text">检测到数据库有新版本，需要现在更新吗？</string>
    <string name="db_update_dialog_confirm">更新</string>
    <string name="db_update_dialog_cancel">稍后</string>
    <string name="db_update_progress_title">Update Database</string>
    <string name="db_update_progress_text">Updating…</string>
    <string name="db_update_download_finished_text">Download complete. Unpacking…</string>
    <string name="db_update_finished_text">Update complete</string>
    <string name="chara_load_failed">数据初始化失败，详情请参照日志</string>
    <string name="db_update_failed">数据库更新失败，详情请参照日志</string>

    <string name="clanwar_update_last_empty">作业数据为空</string>
    <string name="clanwar_update_last">作业更新于%1$s前</string>
    <string name="clanwar_update_dialog_title">作业更新</string>
    <string name="clanwar_update_dialog_text">是否更新作业</string>
    <string name="clanwar_update_dialog_confirm">更新</string>
    <string name="clanwar_update_dialog_cancel">稍后</string>
    <string name="clanwar_update_clanwar_empty">会战排期数据为空，请更新数据库</string>
    <string name="clanwar_update_progress_title">作业下载</string>
    <string name="clanwar_update_progress_text">作业下载中。。。</string>
    <string name="clanwar_update_progress_text_one">一阶段作业下载中。。。</string>
    <string name="clanwar_update_progress_text_two">二阶段作业下载中。。。</string>
    <string name="clanwar_update_progress_text_three">三阶段作业下载中。。。</string>
    <string name="clanwar_update_progress_text_four">四阶段作业下载中。。。</string>
    <string name="clanwar_update_finished_text">作业更新完成</string>
    <string name="clanwar_update_finished_winth_duplicate_id">作业更新完成 存在重复ID作业:%1$s</string>
    <string name="clanwar_update_fail">作业更新失败</string>

    <string name="title_collection">收藏</string>
    <string name="title_teamlist">作业</string>
    <string name="title_menu">菜单</string>

    <string name="collection_empty_hint">当前分刀收藏为空\n请点击分刀按钮进行分刀</string>

    <string name="teamlist_empty_hint">%1$s作业为空\n请更新作业或等待会战开始</string>
    <string name="teamlist_menu_link">链接</string>
    <string name="teamlist_menu_link_screen">链接</string>
    <string name="teamlist_menu_link_show">展示作业链接</string>
    <string name="teamlist_menu_link_screen_dialog_confirm">确定</string>
    <string name="teamlist_menu_auto">AUTO</string>
    <string name="teamlist_menu_auto_screen">AUTO筛选</string>
    <string-array name="teamlist_menu_auto_screen_dialog_options">
        <item>全部</item>
        <item>AUTO</item>
        <item>非AUTO</item>
    </string-array>
    <string name="teamlist_menu_auto_screen_dialog_confirm">确定</string>
    <string name="teamlist_menu_all">全部</string>
    <string name="teamlist_menu_one">一阶段</string>
    <string name="teamlist_menu_two">二阶段</string>
    <string name="teamlist_menu_three">三阶段</string>
    <string name="teamlist_menu_four">四阶段</string>

    <string name="menu_clanwar">作业</string>
    <string name="menu_clanwar_update">作业更新</string>
    <string name="menu_clanwar_way">作业下载方式</string>
    <string-array name="menu_clanwar_way_dialog_options">
        <item>Github Page(据说有些运营商会无法使用)</item>
        <item>cloudflare(每日有全体100,000调用上限)</item>
        <item>JsDeliver(有4-5小时的更新延迟)</item>
        <item>Github Raw(需要翻墙)</item>
    </string-array>
    <string name="menu_clanwar_way_dialog_confirm">确定</string>
    <string name="menu_assist">辅助功能</string>
    <string name="menu_permission">权限设置</string>
    <string name="menu_auto_click">连点设置</string>
    <string name="menu_setting">设置</string>
    <string name="menu_user">本地用户</string>
    <string name="menu_character_screen">角色筛选</string>
    <string name="menu_character_screen_enable">角色筛选生效</string>
    <string name="menu_link_open_type">链接打开方式</string>
    <string-array name="menu_link_open_type_dialog_options">
        <item>用浏览器打开</item>
        <item>通过文本分享</item>
    </string-array>
    <string name="menu_link_open_type_dialog_confirm">确定</string>
    <string name="menu_system">系统</string>
    <string name="menu_db_version">数据库版本</string>
    <string name="menu_app_version">应用版本</string>
    <string name="menu_auto_update">自动更新</string>
    <string name="menu_others">其它</string>
    <string name="menu_record">日志</string>
    <string name="menu_about">关于</string>

    <string name="teamgroup_title">分刀</string>
    <string name="teamgroup_state_start">点击生成分刀</string>
    <string name="teamgroup_state_progressing">分刀生成中。。。</string>
    <string name="teamgroup_state_interrupt_finish">生成%1$d个分刀,分刀结果太多提前中断生成，请添加分刀筛选条件</string>
    <string name="teamgroup_state_finish">生成%1$d个分刀</string>
    <string name="teamgroup_menu_screen">筛选</string>
    <string-array name="teamgroup_menu_boss_screen_dialog_options">
        <item>一王</item>
        <item>二王</item>
        <item>三王</item>
        <item>四王</item>
        <item>五王</item>
    </string-array>
    <string name="teamgroup_menu_boss_screen_dialog_confirm">确定</string>
    <string name="teamgroup_menu_auto">AUTO</string>
    <string name="teamgroup_menu_auto_screen">AUTO筛选</string>
    <string name="teamgroup_menu_auto_screen_autocount">AUTO刀%1$d</string>
    <string name="teamgroup_menu_auto_screen_notautocount">非AUTO刀%1$d</string>
    <string name="teamgroup_menu_auto_screen_use">启用auto筛选</string>

    <string name="teamgroup_screen_title">分刀筛选</string>
    <string-array name="teamgroup_screen_stage_options">
        <item>一阶段</item>
        <item>二阶段</item>
        <item>三阶段</item>
        <item>四阶段</item>
    </string-array>
    <string-array name="teamgroup_screen_boss_options">
        <item>一王</item>
        <item>二王</item>
        <item>三王</item>
        <item>四王</item>
        <item>五王</item>
    </string-array>
    <string-array name="teamgroup_screen_auto_options">
        <item>不限</item>
        <item>AUTO</item>
        <item>非AUTO</item>
    </string-array>

    <string name="teamselect_title">阵容选择</string>
    <string name="teamselect_empty_hint">%1$s作业为空\n请更新作业或等待会战开始</string>
    <string name="teamselect_menu_auto">AUTO</string>
    <string name="teamselect_menu_auto_screen">AUTO筛选</string>
    <string-array name="teamselect_menu_auto_screen_dialog_options">
        <item>全部</item>
        <item>AUTO</item>
        <item>非AUTO</item>
    </string-array>
    <string name="teamselect_menu_auto_screen_dialog_confirm">确定</string>
    <string name="teamselect_menu_all">全部</string>
    <string name="teamselect_menu_one">一阶段</string>
    <string name="teamselect_menu_two">二阶段</string>
    <string name="teamselect_menu_three">三阶段</string>
    <string name="teamselect_menu_four">四阶段</string>

    <string name="teamgroup_detail_title">分刀详情</string>
    <string name="teamgroup_detail_menu_share">分享</string>

    <string name="team_detail_title">阵容详情</string>
    <string name="team_detail_menu_block">屏蔽</string>
    <string name="team_detail_menu_share">分享</string>
    <string name="team_detail_damage_dialog_title">自定轴伤</string>
    <string name="team_detail_damage_dialog_hint">自定义阵容伤害(%1$s)</string>

    <string name="user_permission_title">权限设置</string>
    <string name="user_permission_alert_window">系统弹框权限</string>
    <string name="user_permission_accessibility">无障碍权限</string>
    <string name="user_permission_accessibility_description">开启此服务以授权辅助功能</string>
    <string name="user_permission_granted">已授权</string>
    <string name="user_permission_notgranted">未授权</string>

    <string name="auto_click_title">连点设置</string>
    <string name="auto_click_enable">是否启用</string>
    <string name="auto_click_enable_on">已启用</string>
    <string name="auto_click_enable_off">未启用</string>
    <string name="auto_click_tapinterval">连点间隔</string>
    <string name="auto_click_tapinterval_dialog_title">连点间隔</string>
    <string name="auto_click_tapinterval_dialog_hint">连点间隔，大于0，默认10</string>
    <string name="auto_click_tapinterval_dialog_confirm">确定</string>

    <string name="auto_click_character_one">角色一</string>
    <string name="auto_click_character_two">角色二</string>
    <string name="auto_click_character_three">角色三</string>
    <string name="auto_click_character_four">角色四</string>
    <string name="auto_click_character_five">角色五</string>

    <string name="user_manager_title">本地用户管理</string>
    <string name="user_manager_hint">用户贮存设置收藏及筛选配置</string>
    <string name="user_manager_menu_delete">删除</string>
    <string name="user_manager_menu_delete_default_hint">默认用户不可删除</string>
    <string name="user_manager_menu_delete_hint">删除用户%1$s</string>
    <string name="user_manager_add_dialog_title">本地用户添加</string>
    <string name="user_manager_add_dialog_hint">输入用户名</string>
    <string name="user_manager_add_dialog_confirm">确定</string>

    <string name="character_screen_title">角色筛选</string>
    <string name="character_screen_empty_hint">角色数据为空\n请更新数据库</string>
    <string name="character_screen_lack">表示角色缺失但可以借</string>
    <string name="character_screen_skip">表示角色不会参与分刀</string>

    <string name="record_title">日志</string>
    <string name="record_clean_dialog_title">日志</string>
    <string name="record_clean_dialog_text">确定删除所有的日志？</string>
    <string name="record_clean_dialog_confirm">删除</string>
    <string name="record_clean_dialog_cancel">否</string>

    <string name="record_text_title">日志</string>
    <string name="record_text_menu_copy">拷贝</string>
    <string name="record_text_menu_copy_hint">已将文字复制至剪贴板</string>

    <string name="user_about_title">关于</string>
</resources>