<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="285dp"
        android:background="@drawable/assist_pannel_bg"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/area_show"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_texture_24" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/shrink"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_sync_alt_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/character_one"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/auto_click_character_one"
                    android:textColor="@color/white_50"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/character_one_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_assist_character_hint" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/character_two"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/auto_click_character_two"
                    android:textColor="@color/white_50"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/character_two_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_assist_character_hint" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/character_three"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/auto_click_character_three"
                    android:textColor="@color/white_50"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/character_three_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_assist_character_hint" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/character_four"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/auto_click_character_four"
                    android:textColor="@color/white_50"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/character_four_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_assist_character_hint" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/character_five"
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/auto_click_character_five"
                    android:textColor="@color/white_50"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/character_five_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_assist_character_hint" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/multiply_tap"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_more_vert_24" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/multiply_tap_function"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_play_arrow_24" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>